💄 Fix dark mode

--- a/dashboard/client/components/Layout/styles.scss
+++ b/dashboard/client/components/Layout/styles.scss
@@ -10,7 +10,7 @@ main {
   flex-grow: 1;
   overflow: hidden;
   background: var(--bg-primary);
-  box-shadow: 0 0 0 1px rgba(0,0,0,.05), 0 4px 24px 2px rgba(0,0,0,.1);
+  box-shadow: var(--box-shadow);
   transition: all .3s cubic-bezier(.165,.84,.44,1);
   position: absolute;
   left: 360px;
